--- a/packages/plasma-b2c/package.json
+++ b/packages/plasma-b2c/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-b2c",
-  "version": "1.586.0",
+  "version": "1.587.0-dev.0",
   "description": "Salute Design System / React UI kit for business-related web applications.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -42,12 +42,12 @@
     "atLeast": 99.97
   },
   "dependencies": {
-    "@salutejs/plasma-core": "1.202.0",
-    "@salutejs/plasma-hope": "1.347.0",
-    "@salutejs/plasma-new-hope": "0.330.0",
-    "@salutejs/plasma-themes": "0.35.0",
-    "@salutejs/plasma-tokens-b2c": "0.62.0",
-    "@salutejs/plasma-tokens-web": "1.66.0",
+    "@salutejs/plasma-core": "1.203.0-dev.0",
+    "@salutejs/plasma-hope": "1.348.0-dev.0",
+    "@salutejs/plasma-new-hope": "0.331.0-dev.0",
+    "@salutejs/plasma-themes": "0.36.0-dev.0",
+    "@salutejs/plasma-tokens-b2c": "0.63.0-dev.0",
+    "@salutejs/plasma-tokens-web": "1.67.0-dev.0",
     "@salutejs/plasma-typo": "0.42.0"
   },
   "peerDependencies": {
@@ -71,9 +71,9 @@
     "@rollup/plugin-commonjs": "25.0.7",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-cy-utils": "0.132.0",
-    "@salutejs/plasma-icons": "1.221.0",
-    "@salutejs/plasma-sb-utils": "0.202.0",
+    "@salutejs/plasma-cy-utils": "0.133.0-dev.0",
+    "@salutejs/plasma-icons": "1.222.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.203.0-dev.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addon-knobs": "7.0.2",
