--- a/packages/plasma-giga/package.json
+++ b/packages/plasma-giga/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-giga",
-  "version": "0.313.0",
+  "version": "0.314.0-dev.0",
   "description": "Salute Design System / React UI kit for PLASMA GIGA web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,8 +31,8 @@
     "directory": "packages/plasma-giga"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.330.0",
-    "@salutejs/plasma-themes": "0.35.0",
+    "@salutejs/plasma-new-hope": "0.331.0-dev.0",
+    "@salutejs/plasma-themes": "0.36.0-dev.0",
     "@salutejs/plasma-typo": "0.42.0"
   },
   "peerDependencies": {
@@ -58,10 +58,10 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-core": "1.202.0",
-    "@salutejs/plasma-cy-utils": "0.132.0",
-    "@salutejs/plasma-icons": "1.221.0",
-    "@salutejs/plasma-sb-utils": "0.202.0",
+    "@salutejs/plasma-core": "1.203.0-dev.0",
+    "@salutejs/plasma-cy-utils": "0.133.0-dev.0",
+    "@salutejs/plasma-icons": "1.222.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.203.0-dev.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addons": "7.6.17",
