--- a/packages/plasma-tokens-b2c/package.json
+++ b/packages/plasma-tokens-b2c/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-tokens-b2c",
-  "version": "0.62.0",
+  "version": "0.63.0-dev.0",
   "description": "",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -10,7 +10,7 @@
   "devDependencies": {
     "@salutejs/plasma-colors": "0.15.0",
     "@salutejs/plasma-tokens-core": "0.7.0",
-    "@salutejs/plasma-tokens-utils": "0.48.0",
+    "@salutejs/plasma-tokens-utils": "0.49.0-dev.0",
     "@types/node": "^22.13.13",
     "deepmerge": "4.2.2",
     "jsdom": "17.0.0",
