--- a/packages/sdds-netology/package.json
+++ b/packages/sdds-netology/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-netology",
-  "version": "0.317.0",
+  "version": "0.318.0-dev.0",
   "description": "Salute Design System / React UI kit for SDDS NETOLOGY web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -30,8 +30,8 @@
     "directory": "packages/sdds-netology"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.330.0",
-    "@salutejs/plasma-themes": "0.35.0"
+    "@salutejs/plasma-new-hope": "0.331.0-dev.0",
+    "@salutejs/plasma-themes": "0.36.0-dev.0"
   },
   "peerDependencies": {
     "react": ">=16.13.1",
@@ -55,10 +55,10 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-core": "1.202.0",
-    "@salutejs/plasma-cy-utils": "0.132.0",
-    "@salutejs/plasma-icons": "1.221.0",
-    "@salutejs/plasma-sb-utils": "0.202.0",
+    "@salutejs/plasma-core": "1.203.0-dev.0",
+    "@salutejs/plasma-cy-utils": "0.133.0-dev.0",
+    "@salutejs/plasma-icons": "1.222.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.203.0-dev.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addons": "7.6.17",
