--- a/packages/themes/plasma-themes/package.json
+++ b/packages/themes/plasma-themes/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-themes",
-  "version": "0.35.0",
+  "version": "0.36.0-dev.0",
   "description": "Plasma-themes package.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,7 +31,7 @@
     "index.js.map"
   ],
   "devDependencies": {
-    "@salutejs/core-themes": "0.22.0",
+    "@salutejs/core-themes": "0.23.0-dev.0",
     "@types/node": "16.7.13",
     "ts-node": "10.2.1",
     "typescript": "4.2.4"
