--- a/website/plasma-b2c-docs/package.json
+++ b/website/plasma-b2c-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-b2c-docs",
-  "version": "0.213.0",
+  "version": "0.214.0-dev.0",
   "description": "Plasma Documentation.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,11 +31,11 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-b2c": "1.586.0",
-    "@salutejs/plasma-docs-ui": "0.499.0",
-    "@salutejs/plasma-icons": "1.221.0",
-    "@salutejs/plasma-tokens-b2c": "0.62.0",
-    "@salutejs/plasma-tokens-web": "1.66.0",
+    "@salutejs/plasma-b2c": "1.587.0-dev.0",
+    "@salutejs/plasma-docs-ui": "0.500.0-dev.0",
+    "@salutejs/plasma-icons": "1.222.0-dev.0",
+    "@salutejs/plasma-tokens-b2c": "0.63.0-dev.0",
+    "@salutejs/plasma-tokens-web": "1.67.0-dev.0",
     "@salutejs/plasma-typo": "0.42.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
