--- a/website/plasma-web-docs/package.json
+++ b/website/plasma-web-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-web-docs",
-  "version": "0.546.0",
+  "version": "0.547.0-dev.0",
   "description": "Plasma Documentation.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,13 +31,13 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.499.0",
-    "@salutejs/plasma-icons": "1.221.0",
-    "@salutejs/plasma-tokens-b2b": "1.51.0",
-    "@salutejs/plasma-tokens-b2c": "0.62.0",
-    "@salutejs/plasma-tokens-web": "1.66.0",
+    "@salutejs/plasma-docs-ui": "0.500.0-dev.0",
+    "@salutejs/plasma-icons": "1.222.0-dev.0",
+    "@salutejs/plasma-tokens-b2b": "1.52.0-dev.0",
+    "@salutejs/plasma-tokens-b2c": "0.63.0-dev.0",
+    "@salutejs/plasma-tokens-web": "1.67.0-dev.0",
     "@salutejs/plasma-typo": "0.42.0",
-    "@salutejs/plasma-web": "1.588.0",
+    "@salutejs/plasma-web": "1.589.0-dev.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
     "docusaurus-theme-search-typesense": "^0.25.0",
