--- a/website/plasma-website/package.json
+++ b/website/plasma-website/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-website",
-  "version": "0.550.0",
+  "version": "0.551.0-dev.0",
   "description": "Plasma Main App",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,11 +19,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@salutejs/plasma-b2c": "1.586.0",
+    "@salutejs/plasma-b2c": "1.587.0-dev.0",
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-icons": "1.221.0",
-    "@salutejs/plasma-tokens": "1.117.0",
-    "@salutejs/plasma-tokens-b2c": "0.62.0",
+    "@salutejs/plasma-icons": "1.222.0-dev.0",
+    "@salutejs/plasma-tokens": "1.118.0-dev.0",
+    "@salutejs/plasma-tokens-b2c": "0.63.0-dev.0",
     "@salutejs/plasma-typo": "0.42.0",
     "classnames": "^2.5.1",
     "contrast-ratio-checker": "^1.1.7",
