--- a/website/plasma-theme-builder/package.json
+++ b/website/plasma-theme-builder/package.json
@@ -15,7 +15,7 @@
     "@salutejs/plasma-icons": "1.214.0",
     "@salutejs/plasma-tokens-b2b": "1.47.0",
     "@salutejs/plasma-tokens-b2c": "0.58.0",
-    "@salutejs/plasma-tokens-utils": "0.47.0",
+    "@salutejs/plasma-tokens-utils": "^0.49.0",
     "@salutejs/plasma-tokens-web": "1.63.0",
     "@salutejs/plasma-typo": "0.42.0",
     "jszip": "^3.10.1",
