--- a/packages/plasma-tokens-b2b/package.json
+++ b/packages/plasma-tokens-b2b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-tokens-b2b",
-  "version": "1.53.0-dev.0",
+  "version": "1.53.0",
   "description": "",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -8,9 +8,9 @@
   "main": "index.js",
   "types": "index.d.ts",
   "devDependencies": {
-    "@salutejs/plasma-colors": "0.16.0-dev.0",
+    "@salutejs/plasma-colors": "0.16.0",
     "@salutejs/plasma-tokens-core": "0.7.0",
-    "@salutejs/plasma-tokens-utils": "0.50.0-dev.0",
+    "@salutejs/plasma-tokens-utils": "0.50.0",
     "@types/node": "^22.13.13",
     "deepmerge": "4.2.2",
     "jsdom": "17.0.0",
