--- a/packages/themes/core-themes/package.json
+++ b/packages/themes/core-themes/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/core-themes",
-  "version": "0.24.0-dev.0",
+  "version": "0.24.0",
   "description": "Core-themes package",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -22,7 +22,7 @@
     "build"
   ],
   "devDependencies": {
-    "@salutejs/plasma-tokens-utils": "0.50.0-dev.0",
+    "@salutejs/plasma-tokens-utils": "0.50.0",
     "@types/node": "16.7.13",
     "jszip": "3.10.1",
     "ts-node": "10.2.1"
