--- a/website/plasma-web-docs/package.json
+++ b/website/plasma-web-docs/package.json
@@ -23,7 +23,8 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "lint": "../../node_modules/.bin/eslint ./src --ext .ts,.tsx --quiet"
+    "lint": "../../node_modules/.bin/eslint ./src --ext .ts,.tsx --quiet",
+    "generate-index": "node ./scripts/generateIndex.mjs"
   },
   "dependencies": {
     "@docusaurus/core": "3.6.1",
@@ -42,11 +43,14 @@
     "clsx": "^1.1.1",
     "docusaurus-theme-search-typesense": "^0.25.0",
     "file-loader": "^6.2.0",
+    "gray-matter": "4.0.3",
     "prism-react-renderer": "2.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.52.1",
+    "remark-mdx": "3.1.0",
     "styled-components": "^5.3.1",
+    "unified": "11.0.5",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
