--- a/packages/plasma-b2c/package.json
+++ b/packages/plasma-b2c/package.json
@@ -74,13 +74,12 @@
     "@salutejs/plasma-cy-utils": "0.136.0",
     "@salutejs/plasma-icons": "1.222.0",
     "@salutejs/plasma-sb-utils": "0.206.0",
-    "@storybook/addon-docs": "7.6.17",
-    "@storybook/addon-essentials": "7.6.17",
-    "@storybook/addon-knobs": "7.0.2",
-    "@storybook/addons": "7.6.17",
-    "@storybook/react": "7.6.17",
-    "@storybook/react-vite": "7.6.17",
-    "@storybook/theming": "7.6.17",
+    "@storybook/addon-docs": "8.6.14",
+    "@storybook/addon-essentials": "8.6.14",
+    "@storybook/manager-api": "8.6.14",
+    "@storybook/react": "8.6.14",
+    "@storybook/react-vite": "8.6.14",
+    "@storybook/theming": "8.6.14",
     "@types/node": "16.7.13",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -95,7 +94,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rollup": "3.29.4",
-    "storybook": "7.6.17",
+    "storybook": "8.6.14",
     "styled-components": "5.3.1",
     "ts-node": "10.3.0",
     "typescript-coverage-report": "0.7.0",
