--- a/packages/plasma-ui/package.json
+++ b/packages/plasma-ui/package.json
@@ -38,12 +38,12 @@
     "@salutejs/plasma-sb-utils": "0.206.0",
     "@salutejs/plasma-tokens": "1.121.0",
     "@salutejs/use-virtual": "2.0.0",
-    "@storybook/addon-docs": "7.6.17",
-    "@storybook/addon-essentials": "7.6.17",
-    "@storybook/addons": "7.6.17",
-    "@storybook/react": "7.6.17",
-    "@storybook/react-vite": "7.6.17",
-    "@storybook/theming": "7.6.17",
+    "@storybook/addon-docs": "8.6.14",
+    "@storybook/addon-essentials": "8.6.14",
+    "@storybook/manager-api": "8.6.14",
+    "@storybook/react": "8.6.14",
+    "@storybook/react-vite": "8.6.14",
+    "@storybook/theming": "8.6.14",
     "@testing-library/react": "12.0.0",
     "@types/color": "3.0.2",
     "@types/jest": "26.0.24",
@@ -63,7 +63,7 @@
     "jest-styled-components": "7.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "storybook": "7.6.17",
+    "storybook": "8.6.14",
     "styled-components": "5.3.1",
     "ts-jest": "27.0.5",
     "typescript": "4.2.4",
