--- a/packages/plasma-asdk/package.json
+++ b/packages/plasma-asdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-asdk",
-  "version": "0.348.0",
+  "version": "0.349.0-dev.0",
   "description": "Salute Design System / React UI kit for Assistant web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,8 +19,8 @@
     "directory": "packages/plasma-asdk"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.334.0",
-    "@salutejs/plasma-tokens": "1.121.0",
+    "@salutejs/plasma-new-hope": "0.335.0-dev.0",
+    "@salutejs/plasma-tokens": "1.122.0-dev.0",
     "@salutejs/plasma-tokens-b2b": "1.53.0",
     "@salutejs/plasma-typo": "0.42.0"
   },
@@ -39,10 +39,10 @@
     "@babel/preset-typescript": "7.24.1",
     "@microsoft/api-extractor": "7.38.3",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.206.0",
-    "@salutejs/plasma-cy-utils": "0.136.0",
-    "@salutejs/plasma-icons": "1.222.0",
-    "@salutejs/plasma-sb-utils": "0.206.0",
+    "@salutejs/plasma-core": "1.207.0-dev.0",
+    "@salutejs/plasma-cy-utils": "0.137.0-dev.0",
+    "@salutejs/plasma-icons": "1.223.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.207.0-dev.0",
     "@storybook/addon-docs": "8.6.14",
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/manager-api": "8.6.14",
