--- a/packages/plasma-web/package.json
+++ b/packages/plasma-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-web",
-  "version": "1.592.0",
+  "version": "1.593.0-dev.0",
   "description": "Salute Design System / React UI kit for web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,9 +19,9 @@
     "directory": "packages/plasma-web"
   },
   "dependencies": {
-    "@salutejs/plasma-core": "1.206.0",
-    "@salutejs/plasma-hope": "1.351.0",
-    "@salutejs/plasma-new-hope": "0.334.0",
+    "@salutejs/plasma-core": "1.207.0-dev.0",
+    "@salutejs/plasma-hope": "1.352.0-dev.0",
+    "@salutejs/plasma-new-hope": "0.335.0-dev.0",
     "@salutejs/plasma-themes": "0.37.0",
     "@salutejs/plasma-tokens-b2b": "1.53.0",
     "@salutejs/plasma-tokens-b2c": "0.64.0",
@@ -49,9 +49,9 @@
     "@rollup/plugin-commonjs": "25.0.7",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-cy-utils": "0.136.0",
-    "@salutejs/plasma-icons": "1.222.0",
-    "@salutejs/plasma-sb-utils": "0.206.0",
+    "@salutejs/plasma-cy-utils": "0.137.0-dev.0",
+    "@salutejs/plasma-icons": "1.223.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.207.0-dev.0",
     "@storybook/addon-docs": "8.6.14",
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/manager-api": "8.6.14",
