--- a/packages/sdds-finai/package.json
+++ b/packages/sdds-finai/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-finai",
-  "version": "0.313.0",
+  "version": "0.314.0-dev.0",
   "description": "Salute Design System / React UI kit for SDDS FinAI web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,8 +19,8 @@
     "directory": "packages/sdds-fiai"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.334.0",
-    "@salutejs/sdds-themes": "0.46.0"
+    "@salutejs/plasma-new-hope": "0.335.0-dev.0",
+    "@salutejs/sdds-themes": "0.47.0-dev.0"
   },
   "peerDependencies": {
     "react": ">=16.13.1",
@@ -36,10 +36,10 @@
     "@babel/preset-react": "7.24.1",
     "@babel/preset-typescript": "7.24.1",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.206.0",
-    "@salutejs/plasma-cy-utils": "0.136.0",
-    "@salutejs/plasma-icons": "1.222.0",
-    "@salutejs/plasma-sb-utils": "0.206.0",
+    "@salutejs/plasma-core": "1.207.0-dev.0",
+    "@salutejs/plasma-cy-utils": "0.137.0-dev.0",
+    "@salutejs/plasma-icons": "1.223.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.207.0-dev.0",
     "@storybook/addon-docs": "8.6.14",
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/manager-api": "8.6.14",
