--- a/utils/plasma-cy-utils/package.json
+++ b/utils/plasma-cy-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-cy-utils",
-  "version": "0.136.0",
+  "version": "0.137.0-dev.0",
   "description": "Test helpers shared between ui libraries.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -26,12 +26,12 @@
   "devDependencies": {
     "@cypress/react": "5.12.0",
     "@salutejs/plasma-themes": "0.37.0",
-    "@salutejs/plasma-tokens": "1.121.0",
+    "@salutejs/plasma-tokens": "1.122.0-dev.0",
     "@salutejs/plasma-tokens-b2b": "1.53.0",
     "@salutejs/plasma-tokens-b2c": "0.64.0",
     "@salutejs/plasma-tokens-web": "1.68.0",
     "@salutejs/plasma-typo": "0.42.0",
-    "@salutejs/sdds-themes": "0.46.0",
+    "@salutejs/sdds-themes": "0.47.0-dev.0",
     "@types/node": "18.16.20",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
