--- a/website/plasma-website/package.json
+++ b/website/plasma-website/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-website",
-  "version": "0.554.0",
+  "version": "0.555.0-dev.0",
   "description": "Plasma Main App",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,10 +19,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@salutejs/plasma-b2c": "1.590.0",
+    "@salutejs/plasma-b2c": "1.591.0-dev.0",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-icons": "1.222.0",
-    "@salutejs/plasma-tokens": "1.121.0",
+    "@salutejs/plasma-icons": "1.223.0-dev.0",
+    "@salutejs/plasma-tokens": "1.122.0-dev.0",
     "@salutejs/plasma-tokens-b2c": "0.64.0",
     "@salutejs/plasma-typo": "0.42.0",
     "classnames": "^2.5.1",
